# uthar-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bluetooth_server.py  esp.py  sdkconfig
.github/workflows/: ci.yml
bindings/: Makefile  README.md  dmp.cpp  setup.py  test.py
bindings/src/: dmp.cpp  helper_3dmath.h
cmake_bindings/: CMakeLists.txt  README.md
cmake_bindings/src/: helper_3dmath.h
components/I2Cdev/: I2Cdev.cpp  I2Cdev.h
components/MPU6050/: MPU6050.cpp  MPU6050.h  MPU6050_6Axis_MotionApps20.h
main/: CMakeLists.txt  config.h  example_spp_acceptor_demo.c  main.c  mpu.cpp  mpu.h
